# minimal-bazel-java

./: .bazelproject  .bazelrc  .gitignore  BAZEL_JDTLS_INTEGRATION.md  MODULE.bazel  WORKSPACE  jdtls-bazel-launcher.sh
.eclipse/: .bazelproject
.eclipse/.intellij-aspects/1e99c4-9.0.0/: code_generator_info.bzl
docs/: BAZEL_JDTLS_ACHIEVEMENTS_MAR_01.md  BAZEL_JDTLS_INTEGRATION.md
src/main/java/com/example/: App.java  BUILD
src/test/java/com/example/: AppTest.java  BUILD
