module(
    name = "bazel_java_test",
    version = "1.0",
)

bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "com.fasterxml.jackson.core:jackson-databind:2.15.2",
        "junit:junit:4.13.2",
    ],
    repositories = [
        "https://maven.google.com/content/repositories/releases",
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(maven, "maven")
